It's been a long time... Scripts are work in progress, ip is hard-coded in them. build.sh: fixed problem of '+1' version number; after upload, waits for some logs to grab build.xml: the project is presheaf now, hence all the renaming web.xml: same here, services renamed ec2setup: minor fixes setup.txt: now focuses on micro a bunch of binaries removed (they are installed by apt-get samples: Added lambda cube, and a bunch of other cleanups Got rid of ScalaHttpRequest DiagramPage.scala: added version visualization and minor things DiagramRenderer.scala: log is split into lines; using script for running the job; decoder - fixed file-naming errors DiagramSamples.scala: reads samples from resource DiagramService.scala: returns an xml, not html HtmlSnippets.scala: dws format changed (specifying output format) OS.scala: exceptions serialized (for debugging? h.z.) PresheafServlet.scala: added cheap logging, subclassing from HttpServlet PullbackPage, PullbackService.scala: gone todo.txt: current update.sh: using flag file to make sure the war is all there; a bunch of other caveats and fixes index.html: just pr

--- a/descr/web.xml
+++ b/descr/web.xml
@@ -5,32 +5,36 @@
 <web-app>
 
   <servlet>
-    <servlet-name>pullback</servlet-name>
-    <servlet-class>org.pullback.PullbackPage</servlet-class>
+    <servlet-name>diagrampage</servlet-name>
+    <servlet-class>org.presheaf.DiagramPage</servlet-class>
     <load-on-startup>2</load-on-startup>
   </servlet>
+
   <servlet>
-    <servlet-name>pullbacks2</servlet-name>
-    <servlet-class>servletExamples.PullbackPage</servlet-class>
+    <servlet-name>diagramsamples</servlet-name>
+    <servlet-class>org.presheaf.DiagramSamples</servlet-class>
     <load-on-startup>2</load-on-startup>
   </servlet>
+
   <servlet>
-    <servlet-name>pullback-service</servlet-name>
-    <servlet-class>org.pullback.PullbackService</servlet-class>
+    <servlet-name>diagramservice</servlet-name>
+    <servlet-class>org.presheaf.DiagramService</servlet-class>
     <load-on-startup>2</load-on-startup>
   </servlet>
-  <!-- Standard Action Servlet Mapping -->
+
   <servlet-mapping>
-    <servlet-name>pullback</servlet-name>
-    <url-pattern>/pullback</url-pattern>
+    <servlet-name>diagrampage</servlet-name>
+    <url-pattern>/main</url-pattern>
   </servlet-mapping>
+
   <servlet-mapping>
-    <servlet-name>pullbacks2</servlet-name>
-    <url-pattern>/pullback2</url-pattern>
+    <servlet-name>diagramsamples</servlet-name>
+    <url-pattern>/samples</url-pattern>
   </servlet-mapping>
+
   <servlet-mapping>
-    <servlet-name>pullback-service</servlet-name>
-    <url-pattern>/pullbacksvc</url-pattern>
+    <servlet-name>diagramservice</servlet-name>
+    <url-pattern>/dws</url-pattern>
   </servlet-mapping>
-  
+
 </web-app>
