--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="src2pdf" default="war">
+<project name="presheaf" default="war">
 
   <!-- your classpath must contain                                    -->
   <!--    "tools.jar", scala.jar"                                     -->
@@ -6,8 +6,8 @@
   <!--  never write classes that do not live within a package         -->
 
   <target name="init">
-    <mkdir dir="./build/src2pdf/WEB-INF/lib"/>
-    <mkdir dir="./build/src2pdf/WEB-INF/classes"/>
+    <mkdir dir="./build/presheaf/WEB-INF/lib"/>
+    <mkdir dir="./build/presheaf/WEB-INF/classes"/>
     <!-- set properties: tomcat.home, scala.home -->
     <property file="ant.properties"/>
     <taskdef name="scalac" classname="scala.tools.ant.Scalac"
@@ -17,7 +17,7 @@
   <!-- build:    compile servlets -->
   <target name="build" depends="init">
     <!-- provide servlet-api.jar in classpath, enable xml parsing -->
-    <scalac srcdir="src" destdir="./build/src2pdf/WEB-INF/classes"
+    <scalac srcdir="src" destdir="./build/presheaf/WEB-INF/classes"
 	   classpath="${scala-library.jar}:${servlet-api.jar}">
       <include name="**/*.scala"/>
     </scalac>
@@ -28,25 +28,28 @@
   <target name="deploy" depends="init, build">
 
     <!-- copy deployment descriptor -->
-    <copy file="./descr/web.xml" todir="./build/src2pdf/WEB-INF"/>
+    <copy file="./descr/web.xml" todir="./build/presheaf/WEB-INF"/>
+
+    <!-- copy the files we need -->
+    <copy file="src/main/resources/samples.txt" todir="./build/presheaf/WEB-INF/classes"/>
+    <copy file="src/main/resources/buildno.txt" todir="./build/presheaf/WEB-INF/classes"/>
 
     <!-- provide servlets with Scala runtime -->
-    <copy file="${scala.home}/lib/scala-library.jar" todir="./build/src2pdf/WEB-INF/lib"/>
+    <copy file="${scala.home}/lib/scala-library.jar" todir="./build/presheaf/WEB-INF/lib"/>
 
     <!-- copy static web content -->
-    <copy todir="./build/src2pdf">
+    <copy todir="./build/presheaf">
       <fileset dir="./web"/>
     </copy>
   </target>
 
   <target name="war" depends="deploy">
-    <war destfile="./build/src2pdf.war" webxml="./descr/web.xml">
-      <classes dir="./build/src2pdf/WEB-INF/classes" includes="**"/>
+    <war destfile="./build/presheaf.war" webxml="./descr/web.xml">
+      <classes dir="./build/presheaf/WEB-INF/classes" includes="**"/>
       <lib file="${scala.home}/lib/scala-library.jar"/>
       <fileset dir="./web" includes="**"/>  
     </war>
   </target>
-
 
   <!-- clean:    remove everything that was built,copied -->  
   <target name="clean">
