--- a/ant.properties
+++ b/ant.properties
@@ -1,8 +1,8 @@
-tomcat.home = /usr/share/tomcat/apache-tomcat-6.0.29
+tomcat.home = /usr/share/tomcat6
 
 servlet-api.jar = ${tomcat.home}/lib/servlet-api.jar 
 # e.g. tomcat-${version}/common/lib/servlet-api.jar, or sbaz.home/lib/servlet-api.jar
-scala.home = /usr/local/bin/scala/scala-2.8.1.final
+scala.home = /usr/local/bin/scala/scala-2.9.0.final
 
 scala-library.jar = ${scala.home}/lib/scala-library.jar
 scala-compiler.jar = ${scala.home}/lib/scala-compiler.jar
