Fixed error message Fixed history display and cookie handling

--- a/ant.properties
+++ b/ant.properties
@@ -2,7 +2,7 @@ tomcat.home = /usr/share/tomcat6
 
 servlet-api.jar = ${tomcat.home}/lib/servlet-api.jar 
 # e.g. tomcat-${version}/common/lib/servlet-api.jar, or sbaz.home/lib/servlet-api.jar
-scala.home = /usr/local/bin/scala/scala-2.9.0.final
+scala.home = ${env.SCALA_HOME}
 
 scala-library.jar = ${scala.home}/lib/scala-library.jar
 scala-compiler.jar = ${scala.home}/lib/scala-compiler.jar
